# poetry-practice

./: LICENSE  README.md  main.py  pyproject.toml
src/: dates.py  numbers.py  pokemon.py  shapes.py  text.py
tests/: test_dates.py  test_numbers.py  test_pokemon.py  test_shapes.py
