[tool.poetry]
name = "poetry-practice"
version = "0.1.0"
description = "Just playing around with poetry"
authors = ["ivanCanaveral <canaveral.ivan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.14.3"
black = "^22.3.0"
mypy = "^0.961"

[tool.pylint.messages_control]
max-line-length = 79

[tool.black]
line-length = 79

[tool.mypy]
disallow_untyped_defs = True
disallow_any_unimported = True
no_implicit_optional = True
check_untyped_defs = True
warn_return_any = True
show_error_codes = True
warn_unused_ignores = True

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
