[tool.poetry]
name = "poetry-practice"
version = "0.1.0"
description = "Just playing around with poetry"
authors = ["ivanCanaveral <canaveral.ivan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.3"
black = "^22.3.0"
mypy = "^0.961"

[tool.pylint.messages_control]
max-line-length = 79

[tool.black]
line-length = 79

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
